Fix icons in GUI

--- a/python/gui/Resources.qrc
+++ b/python/gui/Resources.qrc
@@ -1,8 +1,10 @@
 <RCC>
     <qresource prefix="/">
         <file>images/application_exit.png</file>
+        <file>images/file_export.png</file>
         <file>images/file_open.png</file>
         <file>images/file_save.png</file>
+        <file>images/folder_open.png</file>
         <file>images/help_about.png</file>
     </qresource>
 </RCC>
