--- a/python/gui/Resources.qrc
+++ b/python/gui/Resources.qrc
@@ -4,6 +4,7 @@
         <file>images/file_add.png</file>
         <file>images/file_export.png</file>
         <file>images/file_open.png</file>
+        <file>images/file_remove.png</file>
         <file>images/file_save.png</file>
         <file>images/folder_open.png</file>
         <file>images/help_about.png</file>
