--- a/python/getdist/gui/Resources.qrc
+++ b/python/getdist/gui/Resources.qrc
@@ -8,6 +8,7 @@
         <file>images/file_save.png</file>
         <file>images/folder_open.png</file>
         <file>images/help_about.png</file>
+        <file>images/view_clear.png</file>
         <file>images/view_text.png</file>
     </qresource>
 </RCC>
